# Crafter-C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad/: CMakeLists.txt  gl.c  gl.h
glad/src/: gl.c
glfw-3.3.6/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.3.6/examples/: CTestTestfile.cmake  Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
glfw-3.3.6/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
glfw-3.3.6/tests/: CTestTestfile.cmake  Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/: chunk.cpp  chunk.h  deltaTime.cpp  deltaTime.h  main.cpp  mesh.cpp  mesh.h  texture.cpp  texture.h
src/debug/: glfwErrorCallback.cpp  glfwErrorCallback.h  log.cpp  log.h
src/explicitIO/: explicitIO.cpp  explicitIO.h
src/shaderCode/: fragment.fs  shaderCode.cpp  shaderCode.h  vertex.vs
src/userInput/: keyBoard.cpp  keyBoard.h
stb/: CMakeLists.txt  stb.cpp
